--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,8 @@ file.reference.sqlite-jdbc-3.49.1.0.jar=..\\..\\drivers\\sqlite-jdbc-3.49.1.0.ja
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.49.1.0.jar}
+    ${file.reference.sqlite-jdbc-3.49.1.0.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
