--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/huts_system
 excludes=
+file.reference.flatlaf-demo-3.6.jar=drivers\\flatlaf-demo-3.6.jar
 file.reference.sqlite-jdbc-3.49.1.0.jar=..\\..\\drivers\\sqlite-jdbc-3.49.1.0.jar
+file.reference.sqlite-jdbc-3.49.1.0.jar-1=drivers\\sqlite-jdbc-3.49.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.49.1.0.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.sqlite-jdbc-3.49.1.0.jar-1}:\
+    ${file.reference.flatlaf-demo-3.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
