--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=huts_system
+application.vendor=Ireneo III
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,17 +33,26 @@ dist.jar=${dist.dir}/huts_system.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/huts_system
+endorsed.classpath=
 excludes=
 file.reference.flatlaf-demo-3.6.jar=drivers\\flatlaf-demo-3.6.jar
-file.reference.sqlite-jdbc-3.49.1.0.jar=..\\..\\drivers\\sqlite-jdbc-3.49.1.0.jar
+file.reference.google-java-format-1.26.0-all-deps.jar=drivers\\google-java-format-1.26.0-all-deps.jar
+file.reference.google-java-format-eclipse-plugin-1.26.0.jar=drivers\\google-java-format-eclipse-plugin-1.26.0.jar
+file.reference.jcommon-1.0.23.jar=drivers\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=drivers\\jfreechart-1.0.19.jar
 file.reference.sqlite-jdbc-3.49.1.0.jar-1=drivers\\sqlite-jdbc-3.49.1.0.jar
+file.reference.xchart-3.8.8.jar=drivers\\xchart-3.8.8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.49.1.0.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.sqlite-jdbc-3.49.1.0.jar-1}:\
-    ${file.reference.flatlaf-demo-3.6.jar}
+    ${file.reference.flatlaf-demo-3.6.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.google-java-format-1.26.0-all-deps.jar}:\
+    ${file.reference.google-java-format-eclipse-plugin-1.26.0.jar}:\
+    ${file.reference.xchart-3.8.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
